Fix spacing in page headers

--- a/themes/theme-ecridil-2018/source/css/components/quire-page.scss
+++ b/themes/theme-ecridil-2018/source/css/components/quire-page.scss
@@ -182,6 +182,8 @@ body {
   background-repeat: no-repeat;
   background-position: cover;
   text-align: center;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 
   .quire-page--splash & {
     background-color: $quire-splash-page-color;
